--- a/static-app/index.html
+++ b/static-app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -28,6 +28,50 @@
       <li>Item 4</li>
     </ul>
   </div>
+  <div class="bordas">
+    div com bordas
+  </div>
 </body>
 
 </html>
+
+<!-- 
+    INICIAR NESSE PONTO
+
+   <!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Beers</title>
+  <link rel="stylesheet" href="main.css">
+</head>
+
+<body>
+  <div>
+    <h1>Inicio h1</h1>
+    <h2>Inicio h2</h2>
+    <h3>Inicio h3</h3>
+    <h4>Inicio h4</h4>
+  </div>
+  <div>
+    <Button>Botao Padrão</Button>
+  </div>
+  <div>
+    <p>Lista Padrão</p>
+    <ul>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+      <li>Item 4</li>
+    </ul>
+  </div>
+  <div class="bordas">
+    div com bordas
+  </div>
+</body>
+
+</html>
+ -->
