--- a/static-app/index.html
+++ b/static-app/index.html
@@ -10,27 +10,87 @@
 </head>
 
 <body>
-  <div>
-    <h1>Inicio h1</h1>
-    <h2>Inicio h2</h2>
-    <h3>Inicio h3</h3>
-    <h4>Inicio h4</h4>
-  </div>
-  <div>
-    <Button>Botao Padrão</Button>
-  </div>
-  <div>
-    <p>Lista Padrão</p>
-    <ul>
-      <li>Item 1</li>
-      <li>Item 2</li>
-      <li>Item 3</li>
-      <li>Item 4</li>
-    </ul>
-  </div>
-  <div class="bordas">
-    div com bordas
-  </div>
+  <main class="app">
+    <!-- PART 1 -->
+    <header class="header">
+      <h1 class="header-titulo">Biritis</h1>
+    </header>
+
+    <!-- PART 2 -->
+    <div class="cerveja-selecionada-block">
+      <div class="cerveja-selecionada">
+        <img class="cerveja-selecionada-img" src="https://images.punkapi.com/v2/keg.png" alt="cerveja selecionada">
+        <div class="cerveja-selecionada-nome">Buzz</div>
+        <div class="cerveja-selecionada-label"> Reall Bitter Experience</div>
+      </div>
+    </div>
+
+    <!-- PART 3 -->
+    <div class="cervejas">
+      <div>
+        <input class="cervejas-filtro-input" type="text" placeholder="Eu quero uma...">
+      </div>
+      <ul class="cervejas-lista">
+        <li class="cervejas-lista-item">
+          <div class="cerveja">
+            <div class="cerveja-img-block">
+              <img class="cerveja-img" src="https://images.punkapi.com/v2/keg.png" alt="cerveja selecionada">
+            </div>
+            <div class="cerveja-nome">Buzz</div>
+          </div>
+        </li>
+        <li class="cervejas-lista-item">
+          <div class="cerveja">
+            <div class="cerveja-img-block">
+              <img class="cerveja-img" src="https://images.punkapi.com/v2/keg.png" alt="cerveja selecionada">
+            </div>
+            <div class="cerveja-nome">Buzz</div>
+          </div>
+        </li>
+        <li class="cervejas-lista-item">
+          <div class="cerveja">
+            <div class="cerveja-img-block">
+              <img class="cerveja-img" src="https://images.punkapi.com/v2/keg.png" alt="cerveja selecionada">
+            </div>
+            <div class="cerveja-nome">Buzz</div>
+          </div>
+        </li>
+        <li class="cervejas-lista-item">
+          <div class="cerveja">
+            <div class="cerveja-img-block">
+              <img class="cerveja-img" src="https://images.punkapi.com/v2/keg.png" alt="cerveja selecionada">
+            </div>
+            <div class="cerveja-nome">Buzz</div>
+          </div>
+        </li>
+        <li class="cervejas-lista-item">
+          <div class="cerveja">
+            <div class="cerveja-img-block">
+              <img class="cerveja-img" src="https://images.punkapi.com/v2/keg.png" alt="cerveja selecionada">
+            </div>
+            <div class="cerveja-nome">Buzz</div>
+          </div>
+        </li>
+        <li class="cervejas-lista-item">
+          <div class="cerveja">
+            <div class="cerveja-img-block">
+              <img class="cerveja-img" src="https://images.punkapi.com/v2/keg.png" alt="cerveja selecionada">
+            </div>
+            <div class="cerveja-nome">Buzz</div>
+          </div>
+        </li>
+        <li class="cervejas-lista-item">
+          <div class="cerveja">
+            <div class="cerveja-img-block">
+              <img class="cerveja-img" src="https://images.punkapi.com/v2/keg.png" alt="cerveja selecionada">
+            </div>
+            <div class="cerveja-nome">Buzz</div>
+          </div>
+        </li>
+
+      </ul>
+    </div>
+  </main>
 </body>
 
 </html>
