--- a/static-app/index.html
+++ b/static-app/index.html
@@ -27,7 +27,7 @@
 
     <!-- PART 3 -->
     <div class="cervejas">
-      <div>
+      <div class="cervejas-filtro-block">
         <input class="cervejas-filtro-input" type="text" placeholder="Eu quero uma...">
       </div>
       <ul class="cervejas-lista">
